# httpbin_sdk

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: main.yml
docs/: conf.py  main.rst
httpbin_sdk/: client.py  errors.py  internal_utils.py  response.py
tests/: test_my_app.py
