[tool.poetry]
name = "httpbin_sdk"
version = "0.1.0"
description = ""
authors = ["theognis1002 <theognis1002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.1"
Sphinx = "^4.5.0"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
